[project]
name = "pychart_common"
version = "0.1.0"
description = "Common charting primitives and renderers"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "plotly",
  "bokeh",
  "matplotlib",
  "streamlit"
]
[tool.setuptools.packages.find]
where = ["src"]
includes = ["pychart_common*"]
